buttons+ form end

--- a/apply.html
+++ b/apply.html
@@ -144,5 +144,15 @@
             <textarea id="otherskills" name="otherskills" rows="4" cols="40"></textarea>
           </p>
         </fieldset> 
+        <!-- Buttons -->
+        <div class="buttonfix1">
+          <input type="submit" value="Apply Now" class="btn" />
+          <input type="reset" value="Reset Form" class="btn" />
+        </div>
+
+      </form>
+      <!-- Form End -->
+
+    </main>
        </form>
      </main>
