--- a/apply.html
+++ b/apply.html
@@ -6,153 +6,140 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Job Application Form">
     <meta name="author" content="Can Sang">
-    <link rel="stylesheet" href="jobs_styles.css">
         <!-- Title of the tab -->
     <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-    <link rel="stylesheet" href="jobs_styles.css"> 
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 
 <body>
-<div class="container">
 
     <!-- Header Section -->
-    <div class="header">
-        <!-- Logo -->
-        <div class="logo-container">
-            <img src="Panda Mice-logo.png" alt="PandaMice Logo" />
-        </div>
+  <header class="site-header">
+    <div class="container header-inner">
+        <!-- Logo + Brand Text -->
+      <a href="index.html" class="brand">
+        <img src="Panda Mice-logo.png" alt="PandaMice Logo" />
+        PandaMice Careers
+      </a>
 
         <!-- Navigation Menu -->
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="apply.html">Apply</a></li>
+                <li><a href="apply.html" class=""current">Apply</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </div>
     <!-- Main Content Section -->
-     <main>
+     <main class="site-main container">
       <!--Page Title-->
-       <h1 class="text-center">Job Application</h1>
+       <h1>Job Application</h1>
        <!--Form Begin -->
-       <form method="post" action="http://mercury.swin.edu.au/it000000/formtest.php">
+       <form class="form-grid" method="post" action="http://mercury.swin.edu.au/it000000/formtest.php">
         <!-- Personal Information -->
-        <fieldset class="job_apply_page grey_content_section">
-          <legend class="legend_2">Personal Information</legend>
-          <p>
-            <label for="jobref">Job Reference Number</label>
-            <input type="text" id="jobref" name="jobref" maxlength="5" required />
-          </p>
-          <p>
-            <label for="firstname">First Name</label>
-            <input type="text" id="firstname" name="firstname" maxlength="20" required />
-          </p>
-          <p>
-            <label for="lastname">Last Name</label>
-            <input type="text" id="lastname" name="lastname" maxlength="20" required />
-          </p>
-          <p>
-            <label for="dob">Date of Birth</label>
-            <input type="date" id="dob" name="dob" required />
-          </p>
-        </fieldset>  
-        <!-- Gender -->
-        <fieldset class="job_apply_page">
-          <legend>Gender</legend>
-          <p>
-            <label for="male">Male</label>
-            <input type="radio" id="male" name="gender" value="male" required />
-          </p>
-          <p>
-            <label for="female">Female</label>
-            <input type="radio" id="female" name="gender" value="female" />
-          </p>
-          <p>
-            <label for="other">Other</label>
-            <input type="radio" id="other" name="gender" value="other" />
-          </p>
-        </fieldset>    
-        <!-- Address Information -->
-        <fieldset class="job_apply_page grey_content_section">
-          <legend class="legend_2">Address Information</legend>
-          <p>
-            <label for="street">Street Address</label>
-            <input type="text" id="street" name="street" maxlength="40" required />
-          </p>
-          <p>
-            <label for="suburb">Suburb/Town</label>
-            <input type="text" id="suburb" name="suburb" maxlength="40" required />
-          </p>
-          <p>
-            <label for="state">State</label>
-            <select id="state" name="state" required>
-              <option value="">Please Select</option>
-              <option value="VIC">VIC</option>
-              <option value="NSW">NSW</option>
-              <option value="QLD">QLD</option>
-              <option value="NT">NT</option>
-              <option value="WA">WA</option>
-              <option value="SA">SA</option>
-              <option value="TAS">TAS</option>
-              <option value="ACT">ACT</option>
-            </select>
-          </p>
-          <p>
-            <label for="postcode">Postcode</label>
-            <input type="text" id="postcode" name="postcode" maxlength="4" required />
-          </p>
-        </fieldset>
+      <fieldset class="grid-span-2">
+        <legend>Personal Information</legend>
 
-        <!-- Contact Information -->
-        <fieldset class="job_apply_page">
-          <legend>Contact Information</legend>
-          <p>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
-          </p>
-          <p>
-            <label for="phone">Phone Number</label>
-            <input type="text" id="phone" name="phone" maxlength="12" required />
-          </p>
-        </fieldset>
-
-        <!-- Skills -->
-        <fieldset class="job_apply_page grey_content_section">
-          <legend class="legend_2">Skills</legend>
-          <p>
-            <label for="skill1">Programming</label>
-            <input type="checkbox" id="skill1" name="skills[]" value="programming" />
-          </p>
-          <p>
-            <label for="skill2">Web Design</label>
-            <input type="checkbox" id="skill2" name="skills[]" value="design" />
-          </p>
-          <p>
-            <label for="skill3">Communication</label>
-            <input type="checkbox" id="skill3" name="skills[]" value="communication" />
-          </p>
-          <p>
-            <label for="skill4">Teamwork</label>
-            <input type="checkbox" id="skill4" name="skills[]" value="teamwork" />
-          </p>
-          <p>
-            <label for="otherskills">Other Skills</label>
-            <textarea id="otherskills" name="otherskills" rows="4" cols="40"></textarea>
-          </p>
-        </fieldset> 
-        <!-- Buttons -->
-        <div class="buttonfix1">
-          <input type="submit" value="Apply Now" class="btn" />
-          <input type="reset" value="Reset Form" class="btn" />
+        <div class="form-field">
+          <label for="jobref">Job Reference Number</label>
+          <input type="text" id="jobref" name="jobref" maxlength="5" required />
         </div>
+
+        <div class="form-field">
+          <label for="firstname">First Name</label>
+          <input type="text" id="firstname" name="firstname" maxlength="20" required />
+        </div>
+
+        <div class="form-field">
+          <label for="lastname">Last Name</label>
+          <input type="text" id="lastname" name="lastname" maxlength="20" required />
+        </div>
+
+        <div class="form-field">
+          <label for="dob">Date of Birth</label>
+          <input type="date" id="dob" name="dob" required />
+        </div>
+      </fieldset>
+        <!-- Gender -->
+      <fieldset>
+        <legend>Gender</legend>
+        <label class="radio-row"><input type="radio" name="gender" value="male" required /> Male</label>
+        <label class="radio-row"><input type="radio" name="gender" value="female" /> Female</label>
+        <label class="radio-row"><input type="radio" name="gender" value="other" /> Other</label>
+      </fieldset>
+
+      <!-- Address -->
+      <fieldset class="grid-span-2">
+        <legend>Address Information</legend>
+        <div class="form-field">
+          <label for="street">Street Address</label>
+          <input type="text" id="street" name="street" maxlength="40" required />
+        </div>
+        <div class="form-field">
+          <label for="suburb">Suburb/Town</label>
+          <input type="text" id="suburb" name="suburb" maxlength="40" required />
+        </div>
+        <div class="form-field">
+          <label for="state">State</label>
+          <select id="state" name="state" required>
+            <option value="">Please Select</option>
+            <option value="VIC">VIC</option>
+            <option value="NSW">NSW</option>
+            <option value="QLD">QLD</option>
+            <option value="NT">NT</option>
+            <option value="WA">WA</option>
+            <option value="SA">SA</option>
+            <option value="TAS">TAS</option>
+            <option value="ACT">ACT</option>
+          </select>
+        </div>
+        <div class="form-field">
+          <label for="postcode">Postcode</label>
+          <input type="text" id="postcode" name="postcode" maxlength="4" required />
+        </div>
+      </fieldset>
+
+      <!-- Contact -->
+      <fieldset class="grid-span-2">
+        <legend>Contact Information</legend>
+        <div class="form-field">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-field">
+          <label for="phone">Phone Number</label>
+          <input type="text" id="phone" name="phone" maxlength="12" required />
+        </div>
+      </fieldset>
+
+      <!-- Skills -->
+      <fieldset class="grid-span-2">
+        <legend>Skills</legend>
+        <div class="checkbox-grid">
+          <label><input type="checkbox" name="skills[]" value="programming" /> Programming</label>
+          <label><input type="checkbox" name="skills[]" value="design" /> Web Design</label>
+          <label><input type="checkbox" name="skills[]" value="communication" /> Communication</label>
+          <label><input type="checkbox" name="skills[]" value="teamwork" /> Teamwork</label>
+          <label><input type="checkbox" name="skills[]" value="other" /> Other...</label>
+        </div>
+        <div class="form-field grid-span-2">
+          <label for="otherskills">Other Skills</label>
+          <textarea id="otherskills" name="otherskills" rows="4"></textarea>
+        </div>
+      </fieldset>
+
+      <!-- Buttons -->
+      <div class="grid-span-2">
+        <button type="submit" class="btn">Apply Now</button>
+        <button type="reset" class="btn">Reset</button>
+      </div>
 
       </form>
       <!-- Form End -->
 
     </main>
-       </form>
-     </main>
+    <!-- Main Content Section End -->
