--- a/apply.html
+++ b/apply.html
@@ -10,7 +10,8 @@
     <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="about_style.css"> 
+    <link rel="stylesheet" href="index_styles.css"> 
 </head>
 
 <body>
@@ -143,3 +144,15 @@
 
     </main>
     <!-- Main Content Section End -->
+       <footer class="site-footer" role="contentinfo">
+    <div class="container footer-inner">
+      <p><strong>Contact:</strong> <a href="mailto:info@pandamicegames.com">info@pandamicegames.com</a></p>
+      <ul class="footer-links">
+        <li><a href="https://jira.example.com/pandamicegames" rel="noopener">Jira</a></li>
+        <li><a href="https://github.com/pandamicegames-recruit" rel="noopener">GitHub repository</a></li>
+      </ul>
+      <p class="small">© Panda Mice. Melbourne, Australia.</p>
+    </div>
+  </footer>
+  </body>
+</html>
