--- a/apply.html
+++ b/apply.html
@@ -10,30 +10,32 @@
     <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-    <link rel="stylesheet" href="about_style.css"> 
-    <link rel="stylesheet" href="index_styles.css"> 
+    <link rel="stylesheet" href="about_style.css">
+    <link rel="stylesheet" href="index_styles.css">
 </head>
 
 <body>
 
     <!-- Header Section -->
-  <header class="site-header">
+  <header class="site-header" role="banner">
     <div class="container header-inner">
-        <!-- Logo + Brand Text -->
-      <a href="index.html" class="brand">
-        <img src="Panda Mice-logo.png" alt="PandaMice Logo" />
-        PandaMice Careers
+      <a class="brand" href="index.html" aria-label="Panda Mice home">
+        <img src="/Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
+        <span class="brand-text">
+          <span class="brand-name">Panda Mice</span>
+          <span class="brand-slogan">Play beyond the bounds</span>
+        </span>
       </a>
 
         <!-- Navigation Menu -->
-        <nav>
+        <nav class="site-nav" aria-label="Primary">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="apply.html" class=""current">Apply</a></li>
+                <li><a href="apply.html" aria-current="page" class="current">Apply</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-        </nav>
+        </nav> 
     </div>
     <!-- Main Content Section -->
      <main class="site-main container">
