name syntax fix for css integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Panda Mice — Careers</title>
-  <link rel="stylesheet" href="/index_styles.css">
+  <link rel="stylesheet" href="index_styles.css">
   <meta name="description" content="Join Panda Mice — a Melbourne game studio building ambitious worlds. Explore open roles and apply.">
 </head>
 <body class="home">
