syntax error fixed

--- a/apply.html
+++ b/apply.html
@@ -20,7 +20,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Panda Mice home">
-        <img src="/Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
+        <img src="Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
         <span class="brand-text">
           <span class="brand-name">Panda Mice</span>
           <span class="brand-slogan">Play beyond the bounds</span>
@@ -150,8 +150,8 @@
     <div class="container footer-inner">
       <p><strong>Contact:</strong> <a href="mailto:info@pandamicegames.com">info@pandamicegames.com</a></p>
       <ul class="footer-links">
-        <li><a href="https://jira.example.com/pandamicegames" rel="noopener">Jira</a></li>
-        <li><a href="https://github.com/pandamicegames-recruit" rel="noopener">GitHub repository</a></li>
+        <li><a href="https://pandamice.atlassian.net/jira/software/projects/AWPP1/boards/69/backlog?atlOrigin=eyJpIjoiY2ViNTFiM2YyZjMwNGFjYWI4M2I5MTg5MzJhM2MxNjQiLCJwIjoiaiJ9" rel="noopener">Jira</a></li>
+        <li><a href="https://github.com/majisticswin/PandaMice.git" rel="noopener">GitHub repository</a></li>
       </ul>
       <p class="small">© Panda Mice. Melbourne, Australia.</p>
     </div>
