refactor(jobs): chnage header and footer content and modify style element

--- a/jobs.html
+++ b/jobs.html
@@ -16,8 +16,8 @@
 
         <style>
              main hr {
-                width: 70%;
-                border: 0.5px solid #333333;
+                width: 100%;
+                border: 0.5px solid #233142;
                 margin: 2em 0em;
             }
         </style>
@@ -26,12 +26,17 @@
         <header>
             <div class="header">
                 <!-- Hyperlinked Company name and logo-->
-                <div class="job-head">
-                    <a href="index.html">
-                        <!-- Company Logo -->
-                        <img src="Panda Mice-logo.png" alt="Panda Mice Logo" >
+                <div class="head-inner">
+                    <!-- Company Logo -->
+                    <a href="index.html" class="header-link">
+                        <img src="Panda Mice-logo.png" alt="Panda Mice Logo" width="56" height="56" >
+                        <span class="brand-text">
+                            <span class="brand-name">Panda Mice</span>
+                            <span class="brand-slogan">Play beyond the bounds</span>
+                        </span>
                     </a>
                 </div>
+
                 <!-- Navigation Bar -->
                     <nav class="menu">
                         <ul>
@@ -339,35 +344,14 @@
 
         <footer>
             <!-- Footer -->
-                <div class="footer">
-                    <div class="footerobj">
-                        <h4>Company</h4>
-                        <p><a href="about.html">About Us</a></p>
-                        <p><a href="jobs.html">Careers</a></p>
-                        <p><a href="https://pandamice.atlassian.net/jira/software/projects/AWPP1/summary">Jira</a></p>
-                        <p><a href="https://github.com/majisticswin/PandaMice">GitHub</a></p>
-                        <p><a href="#">Events</a></p>
-                    </div>
-                    <div class="footerobj">
-                        <h4>Contacts</h4>
-                        <p>Email: <a href="mailto:info@pandamice.com">info@pandamice.com</a></p>
-                        <p>Tel: 042 598 741</p>
-                    </div>
-
-                    <div class="footerobj">
-                        <h4>Follow us</h4>
-                        <p><a href="#">Instagram</a></p>
-                        <p><a href="#">Twitter</a></p>
-                        <p><a href="#">LinkedIn</a></p>
-                        <p><a href="#">Facebook</a></p>
-                    </div>
-
-                    <div class="footerbottom">
-                        <hr>
-                        <p>&copy; 2025 Panda Mice. All rights reserved. </p>
-                        <p><a href="#">Terms</a></p>
-                        <p><a href="#">Privacy</a></p>
-                    </div>
+            <div class="footer">
+                <div class="container footer-inner">
+                <p><strong>Contact:</strong> <a href="mailto:info@pandamicegames.com">info@pandamicegames.com</a></p>
+                <ul class="footer-links">
+                    <li><a href="https://jira.example.com/pandamicegames" rel="noopener">Jira</a></li>
+                    <li><a href="https://github.com/pandamicegames-recruit" rel="noopener">GitHub repository</a></li>
+                </ul>
+                <p class="small">© Panda Mice. Melbourne, Australia.</p>
             </div>
         </footer>
         
