--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Panda Mice home">
-        <img src="/Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
+        <img src="Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
         <span class="brand-text">
           <span class="brand-name">Panda Mice</span>
           <span class="brand-slogan">Play beyond the bounds</span>
@@ -49,7 +49,7 @@
     <section aria-labelledby="team-photo">
       <h2 id="team-photo">Team photo</h2>
       <figure class="group-figure">
-        <img src="/group.png" alt="Group G01 smiling in the studio lounge" width="960" height="540">
+        <img src="group.png" alt="Group G01 smiling in the studio lounge" width="960" height="540">
         <figcaption>DSViM — we ship, we test, we snack.</figcaption>
       </figure>
     </section>
