img syntax error fixed for Page Deployment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="site-header" role="banner">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Panda Mice home">
-        <img src="/Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
+        <img src="Panda Mice-logo.png" alt="Panda Mice logo" width="56" height="56">
         <span class="brand-text">
           <span class="brand-name">Panda Mice</span>
           <span class="brand-slogan">Play beyond the bounds</span>
