img tag syntax error fix

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2 id="about-studio">About Panda Mice</h2>
       <p>We’re an independent game studio blending systemic design with artful storytelling. Our engineering culture values code clarity, performance, and kindness in reviews.</p>
       <figure class="studio-figure">
-        <img src="/developers.png" alt="Developers collaborating at Panda Mice studio" width="960" height="540">
+        <img src="developers.png" alt="Developers collaborating at Panda Mice studio" width="960" height="540">
         <figcaption>Our Dedicated Team Working Extensively on The Most Demanding Industry Leading Website EVER!</figcaption>
       </figure>
       <p>We build on modern C++ and C#, with a healthy respect for data‑oriented design, network determinism, and accessibility in UI. We’re funded, stable, and shipping.</p>
