chore(jobs): replace github and jira link

--- a/jobs.html
+++ b/jobs.html
@@ -344,12 +344,12 @@
 
         <footer>
             <!-- Footer -->
-            <div class="footer">
+            <div class="site-footer">
                 <div class="container footer-inner">
                 <p><strong>Contact:</strong> <a href="mailto:info@pandamicegames.com">info@pandamicegames.com</a></p>
                 <ul class="footer-links">
-                    <li><a href="https://jira.example.com/pandamicegames" rel="noopener">Jira</a></li>
-                    <li><a href="https://github.com/pandamicegames-recruit" rel="noopener">GitHub repository</a></li>
+                    <li><a href="https://pandamice.atlassian.net/jira/software/projects/AWPP1/summary?atlOrigin=eyJpIjoiNDdhNGRhOTczMDcwNDI5YThlOWE3ODhjZWQ0ZjFjYWUiLCJwIjoiaiJ9" rel="noopener">Jira</a></li>
+                    <li><a href="https://github.com/majisticswin/PandaMice" rel="noopener">GitHub repository</a></li>
                 </ul>
                 <p class="small">© Panda Mice. Melbourne, Australia.</p>
             </div>
