chore(jobs): rename header classes

--- a/jobs.html
+++ b/jobs.html
@@ -28,11 +28,11 @@
                 <!-- Hyperlinked Company name and logo-->
                 <div class="head-inner">
                     <!-- Company Logo -->
-                    <a href="index.html" class="header-link">
+                    <a href="index.html" class="header-brand">
                         <img src="Panda Mice-logo.png" alt="Panda Mice Logo" width="56" height="56" >
-                        <span class="brand-text">
-                            <span class="brand-name">Panda Mice</span>
-                            <span class="brand-slogan">Play beyond the bounds</span>
+                        <span class="header-text">
+                            <span class="header-name">Panda Mice</span>
+                            <span class="header-slogan">Play beyond the bounds</span>
                         </span>
                     </a>
                 </div>
