feat(jobs): add img and add div for aside and img

--- a/jobs.html
+++ b/jobs.html
@@ -43,7 +43,7 @@
                             <li><a href="index.html">Home</a></li>          <!-- Hyperlinked to Home Page-->
                             <li><a href="jobs.html">Jobs</a></li>           <!-- Hyperlinked to Jobs Page-->
                             <li><a href="apply.html">Application</a></li>   <!-- Hyperlinked to Application Page-->
-                            <li><a href="about.html">About</a></li>         <!-- Hyperlinked to About Page-->
+                            <li><a href="about.html">About our team</a></li> <!-- Hyperlinked to About Page-->
                         </ul>
                     </nav>
             </div>
@@ -51,21 +51,28 @@
         </header>
 
         <main>
-            <!-- Why Join Us  Section -->
-            <aside class="join-us">
-                    <h2> Why Join us!</h2>
-                <ol>
-                    <li>We offer flexible working options, including remote work opportunities!</li> 
-                    <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
-                    <li>We offer Extended parental leave for newly families!</li>
-                    <li>Access to discounted mental health assistance!</li>
-                    <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
-                </ol>
-            </aside>    
 
             <!-- Job Description Section -->
             <h1>Careers</h1>
 
+            <div class="join-us">
+
+                <!-- Image of Colleagues -->
+                <img src="collegues.jpg" alt="A picture of workers">
+
+                <!-- Why Join Us  Section -->
+                <aside>
+                    <h2> Why Join us!</h2>
+                    <ol>
+                        <li>We offer flexible working options, including remote work opportunities!</li> 
+                        <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
+                        <li>We offer Extended parental leave for newly families!</li>
+                        <li>Access to discounted mental health assistance!</li>
+                        <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
+                    </ol>
+                </aside> 
+            </div>
+   
             <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
                 <h2> AI Programmer</h2>
@@ -338,7 +345,7 @@
                 </form>
             </section>
 
-            <hr style="width: 100%;"> <!--This is to break the main content for readability-->
+            <hr> <!--This is to break the main content for readability-->
 
         </main>
 
