--- a/jobs.html
+++ b/jobs.html
@@ -52,27 +52,24 @@
 
         <main>
 
-            <!-- Job Description Section -->
             <h1>Careers</h1>
-
+            
             <div class="join-us">
-
-                <!-- Image of Colleagues -->
-                <img src="collegues.jpg" alt="A picture of workers">
-
-                <!-- Why Join Us  Section -->
-                <aside>
+            <!-- Why Join Us  Section -->
+            <aside class="join-us">
                     <h2> Why Join us!</h2>
-                    <ol>
-                        <li>We offer flexible working options, including remote work opportunities!</li> 
-                        <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
-                        <li>We offer Extended parental leave for newly families!</li>
-                        <li>Access to discounted mental health assistance!</li>
-                        <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
-                    </ol>
-                </aside> 
+                <ol>
+                    <li>We offer flexible working options, including remote work opportunities!</li> 
+                    <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
+                    <li>We offer Extended parental leave for newly families!</li>
+                    <li>Access to discounted mental health assistance!</li>
+                    <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
+                </ol>
+            </aside> yy
             </div>
    
+            <!-- Job Description Section -->
+
             <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
                 <h2> AI Programmer</h2>
