fix(jobs): remove text outside div

--- a/jobs.html
+++ b/jobs.html
@@ -51,26 +51,28 @@
         </header>
 
         <main>
-
             <h1>Careers</h1>
-            
-            <div class="join-us">
+
+            <div>
             <!-- Why Join Us  Section -->
-            <aside class="join-us">
-                    <h2> Why Join us!</h2>
-                <ol>
-                    <li>We offer flexible working options, including remote work opportunities!</li> 
-                    <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
-                    <li>We offer Extended parental leave for newly families!</li>
-                    <li>Access to discounted mental health assistance!</li>
-                    <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
-                </ol>
-            </aside> yy
+                <aside class="join-us">
+                        <h2> Why Join us!</h2>
+                    <ol>
+                        <li>We offer flexible working options, including remote work opportunities!</li> 
+                        <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
+                        <li>We offer Extended parental leave for newly families!</li>
+                        <li>Access to discounted mental health assistance!</li>
+                        <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
+                    </ol>
+                </aside>    
+            </div>
+
             </div>
    
             <!-- Job Description Section -->
 
             <!-- Job Position Description 1 -->
+
             <section id="job_pos1" class="job-position">
                 <h2> AI Programmer</h2>
 
@@ -161,7 +163,7 @@
                 </section>
 
                 <!-- Job Responsibility Section -->
-                 <section class="key-resp">
+                <section class="key-resp">
                     <!-- Key Responsibility -->
                     <h3>Key Responsibilities</h3>
                     <ol>
@@ -171,10 +173,10 @@
                         <li>Work closely with User Experience (UX) and User Interface (UI) Designers to optimize the player interface</li>
                         <li>Creating increasingly difficult levels, which include different environments and enemies.</li>
                     </ol>
-                 </section>
+                </section>
 
                 <!-- Job Requirements Section -->
-                 <section class="job-req">
+                <section class="job-req">
                     <!-- Requirements: Essential & Preferrable -->
                     <h3>Requirements</h3>
 
@@ -197,7 +199,7 @@
                         <li>Ability to collaborate with multidisciplinary teams</li>
                         <li>Experience with modern graphics APIs</li>
                     </ul>
-                 </section>
+                </section>
             </section>
 
             <hr> <!--This is to break the main content for readability-->
@@ -226,7 +228,7 @@
                 </section>
 
                 <!-- Job Responsibility Section -->
-                 <section class="key-resp">
+                <section class="key-resp">
                     <!-- Key Responsibility -->
                     <h3>Key Responsibilities</h3>
                     <ol>
@@ -235,7 +237,7 @@
                         <li>Ensuring in-game assets are high quality, optimised and efficiently managed throughout the entire production process</li>
                         <li>•	Identifying production bottlenecks and contribute to building and maintaining custom tools and scripts for building efficient workflows</li>
                     </ol>
-                 </section>
+                </section>
 
                 <!-- Job Requirements Section -->
                 <section class="job-req">
@@ -265,7 +267,7 @@
                         <li>Understanding in procedural workflows </li>
                         <li>Good Knowledge with version control systems (Git).</li>
                     </ul>
-                 </section>
+                </section>
 
                 <hr> <!--This is to break the main content for readability-->
 
@@ -333,7 +335,7 @@
                         </ul>
                     </section>
                 </section>
- 
+
                 <!-- Apply Now Section -->
                 <form action="apply.html" class="apply-btn">
                     <button >
