chore(jobs): change apply link name on nav

--- a/jobs.html
+++ b/jobs.html
@@ -42,7 +42,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>          <!-- Hyperlinked to Home Page-->
                             <li><a href="jobs.html">Jobs</a></li>           <!-- Hyperlinked to Jobs Page-->
-                            <li><a href="apply.html">Application</a></li>   <!-- Hyperlinked to Application Page-->
+                            <li><a href="apply.html">Apply</a></li>   <!-- Hyperlinked to Application Page-->
                             <li><a href="about.html">About our team</a></li> <!-- Hyperlinked to About Page-->
                         </ul>
                     </nav>
