--- a/jobs.html
+++ b/jobs.html
@@ -268,6 +268,7 @@
                         <li>Good Knowledge with version control systems (Git).</li>
                     </ul>
                 </section>
+                </section>
 
                 <hr> <!--This is to break the main content for readability-->
 
