--- a/apply.html
+++ b/apply.html
@@ -10,8 +10,8 @@
     <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-    <link rel="stylesheet" href="about_style.css">
-    <link rel="stylesheet" href="index_styles.css">
+    <link rel="stylesheet" href="apply_styles.css">
+        <!-- Favicon for the tab -->
 </head>
 
 <body>
