adjustments for apply

--- a/apply.html
+++ b/apply.html
@@ -37,12 +37,15 @@
             </ul>
         </nav> 
     </div>
+  </header>
     <!-- Main Content Section -->
-     <main class="site-main container">
+     <main id="main" class="site-main container" role="main">
       <!--Page Title-->
        <h1>Job Application</h1>
+      <p>Please fill out the form below to apply for a job at Panda Mice. All fields marked with an asterisk (*) are required.</p>
        <!--Form Begin -->
-       <form class="form-grid" method="post" action="http://mercury.swin.edu.au/it000000/formtest.php">
+       <form class="form-grid" method="post" action="http://mercury.swin.edu.au/it000000/formtest.php" novalidate class="form-grid">
+         <p id="form-help" class="small">All fields are required unless marked optional.</p>
         <!-- Personal Information -->
       <fieldset class="grid-span-2">
         <legend>Personal Information</legend>
