chore(jobs): replace ' with &apos; and remove *

--- a/jobs.html
+++ b/jobs.html
@@ -184,7 +184,7 @@
                     <h4>Essential Requirements</h4>
                     <ul>
                         <li>4 years of professional experience as a game developer</li>
-                        <li>Completed a bachelor's degree in computer science, IT or related fields</li>
+                        <li>Completed a bachelor&apos;s degree in computer science, IT or related fields</li>
                         <li>High proficiency in C++ programming and Object oriented programming (OOP)</li> 
                         <li>Strong proficiency in Unreal engine Expertises</li>
                         <li>Strong problem-solving, analytical, and self-learning skills.</li>
@@ -224,7 +224,7 @@
                 <section class="job-desc">
                     <!-- Short Description -->
                     <h3>Short description</h3>
-                    <p>*We are seeking a creative and skillful Technical Artist to join our team. As a technical artist, you will be focusing on developing the tools and pipeline for our real-time game production and bridging the gaps between the arts and technology! Our ideal candidate is someone thrives in the gaps between the technical and arts department, bringing in their creative artist direction and their strong critical thinking skills.</p>
+                    <p>We are seeking a creative and skillful Technical Artist to join our team. As a technical artist, you will be focusing on developing the tools and pipeline for our real-time game production and bridging the gaps between the arts and technology! Our ideal candidate is someone thrives in the gaps between the technical and arts department, bringing in their creative artist direction and their strong critical thinking skills.</p>
                 </section>
 
                 <!-- Job Responsibility Section -->
@@ -235,7 +235,7 @@
                         <li>Collaborating closely with artists, animators, and developers to understand their needs and ensure the best visuals for the game without any technical setbacks</li>
                         <li>Designing and optimising production pipelines to production pipeline to ensure seamless flow of assets from art creation to integration</li>
                         <li>Ensuring in-game assets are high quality, optimised and efficiently managed throughout the entire production process</li>
-                        <li>•	Identifying production bottlenecks and contribute to building and maintaining custom tools and scripts for building efficient workflows</li>
+                        <li>Identifying production bottlenecks and contribute to building and maintaining custom tools and scripts for building efficient workflows</li>
                     </ol>
                 </section>
 
@@ -248,7 +248,7 @@
                     <h4>Essential Requirements</h4>
                     <ul>
                         <li>+4 years of Experience in game development or other related experience</li>
-                        <li>Bachelor’s degree in computer science, Graphics Art or other related fields</li>
+                        <li>Bachelor&apos;s degree in computer science, Graphics Art or other related fields</li>
                         <li>Ability to effectively work and collaborate with both artistic and technical teams</li>
                         <li>Strong critical thinking and problem-solving skills</li>
                         <li>Strong communication skills</li>
